2001-04-06  Robin * Slomkowski  <rslomkow@eazel.com>

	* configure.in: upped version to 1.0.2.1 too keep
	  track of the 3 active branches of nautilus
	  development and keep HEAD sorting higher.

2001-04-06  Gene Z. Ragan  <gzr@eazel.com>

	Attempt to track down possible file descriptor leak.
	
	* libnautilus-extensions/nautilus-volume-monitor.c:
	(get_removable_volumes), (get_current_mount_list),
	(open_cdda_device), (locate_audio_cd):

2001-04-06  Gene Z. Ragan  <gzr@eazel.com>
	
	Add more verbose error message in the case that
	/proc/mounts or /etc/mnttab cannot be opened.
	
	* libnautilus-extensions/nautilus-volume-monitor.c:
	(get_current_mount_list):

2001-04-05  Rebecca Schulman  <rebecka@eazel.com>

	reviewed by: Don Melton <don@eazel.com>

	* help/nautilus-user-manual/C/TRACKED_CHANGES:
	* help/nautilus-user-manual/C/nautilus-user-manual.sgml:
	
	Remove documentation about search from the manual for now.
	Unfortunately, we were not able to get in touch with Dan Mueth
	regarding this change.  The translated copies of the edited manual
	will be changed tomorrow morning.


2001-04-05  Pavel Cisler  <pavel@eazel.com>

	reviewed by: John Harper  <jsh@eazel.com>

	* libnautilus-extensions/nautilus-file.c:
	(nautilus_file_fit_date_as_string),
	(nautilus_file_fit_modified_date_as_string),
	(nautilus_file_get_date_as_string):
	* libnautilus-extensions/nautilus-file.h:
	Add a new function that returns a modified date string,
	formatted to fit a given width. Make the old
	nautilus_file_get_date_as_string call it.
	
	* src/file-manager/fm-list-view.c: (measure_width_callback),
	(trucante_middle_callback), (get_cell_text), (set_up_list):
	Hook up to the get_cell_text signal. For modified text return
	a nicely formatted text string, for everything else just
	ellipsize the result.

2001-04-05  John Sullivan  <sullivan@eazel.com>

	Fixed bug 7986 ("Paste Files" disabled in trash:)

	* src/file-manager/fm-directory-view.c: 