@@ -1,3 +1,11 @@
+2001-04-06  Gene Z. Ragan  <gzr@eazel.com>
+
+	Fix a compile error in the volume monitor code.
+	
+	* libnautilus-extensions/nautilus-volume-monitor.c:
+	(mount_volume_get_cdda_name), (open_cdda_device),
+	(locate_audio_cd):
+
 2001-04-06  Robin * Slomkowski  <rslomkow@eazel.com>
 
 	* configure.in: upped version to 1.0.2.1 too keep
